Step 3 is ready to start, step 4 scaffolding code in place